--- a/vistas/popup.html
+++ b/vistas/popup.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partidas disponibles</title>
-    <link rel="stylesheet" href="../estilos/popup.css">
-    <link rel="stylesheet" href="../estilos/listaPartidas.css">
-    <link rel="stylesheet" href="../estilos/normalize.css">
+    <link rel="stylesheet" href="../css/popup.css">
+    <link rel="stylesheet" href="../css/listaPartidas.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;800&family=Irish+Grover&family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 
