--- a/vistas/ConfiguracionSala.html
+++ b/vistas/ConfiguracionSala.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../estilos/configuracionSala.css">
-<link rel="stylesheet" href="../estilos/normalize.css">
+<link rel="stylesheet" href="../css/configuracionSala.css">
+<link rel="stylesheet" href="../css/normalize.css">
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;800&family=Irish+Grover&family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
 
-
 <title>Configuración de sala</title>
-
  
 <script>
   window.addEventListener('load', function() {
@@ -48,7 +46,7 @@
 </script>
 <script>
   /* Definir una variable para almacenar el valor del input */
-  var creditValue;
+  let creditValue;
 
   function toggleBettingSection() {
     var bettingSection = document.getElementById('betting-section');
@@ -504,7 +502,7 @@ tambien cambia el texto de inhabilitado a habilitado en cada espacio*/
             console.log(txBox)
             nombre = txBox.value;
      var now = new Date();
-      now.setTime(now.getTime()+(3*60*1000));
+      now.setTime(now.getTime()+(10000*60*1000));
       document.cookie = `config='1'; expires=${now.toUTCString()}`;
       document.cookie = `numJugadores = ${numJugadores + 1}; expires=${now.toUTCString()}`;
       document.cookie = `nombre=${nombre}; expires=${now.toUTCString()}`;
@@ -519,7 +517,7 @@ tambien cambia el texto de inhabilitado a habilitado en cada espacio*/
       document.cookie = `ej4=${ej4}; expires=${now.toUTCString()}`;
     
       window.setTimeout(()=>{
-        window.location.replace("./JuegoEnLinea.html");
+        window.location.replace("./mainGame.html");
       },1000);
     }
 
