--- a/vistas/UnirseCrearPartida.html
+++ b/vistas/UnirseCrearPartida.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/IniciarPartida.css">
-    <link rel="stylesheet" href="../estilos/normalize.css">
+    <link rel="stylesheet" href="../css/IniciarPartida.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <title>Iniciar Partida</title>
 </head>
 <body>
